--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -20,8 +20,10 @@
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
     </section>
-
+    
     <section class="main-content">
+      
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/baSyqRUM2aE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
       {{ content }}
 
       <footer class="site-footer">
